# bitmap

./: CMakeLists.txt  README.md
bsi/: CMakeLists.txt  bsi.cpp  bsi.h  cache.cpp  cache.h  common.cpp  common.h
bsi/CRoaring/: CMakeLists.txt
experiments/util/: update_test.cpp
src/dtl/: adept.hpp  bitmap.hpp  iterator.hpp  math.hpp  static_stack.hpp
src/dtl/bitmap/: teb_iter.hpp  teb_scan_util.hpp  teb_wrapper.hpp
src/dtl/bitmap/diff/: merge_teb.hpp
src/dtl/bitmap/part/: part.hpp  part_updirect.hpp
src/dtl/bitmap/util/: bit_buffer_avx2.hpp  bitmap_fun.hpp  bitmap_seq_reader.hpp  bitmap_view.hpp  bitmap_writer.hpp  convert.hpp  mutable_bitmap_tree.hpp  rank1.hpp  rank1_logic_linear.hpp  rank1_logic_surf.hpp  rank1_logic_word_blocked.hpp
src/dtl/simd/: intrin_avx2.hpp  intrin_sse.hpp  intrin_x64.hpp  intrinsics.hpp  types.hpp
teb/: CMakeLists.txt
teb/experiments/util/: prune_util.hpp  update_test.cpp
teb/src/dtl/: adept.hpp  bits.hpp  dtl.hpp  iterator.hpp  math.hpp  simd.hpp  static_stack.hpp  static_stack2.hpp
teb/src/dtl/bitmap/: bitwise_operations.hpp  iterator.hpp  my_test.cpp  teb_builder.hpp  teb_flat.hpp  teb_iter.hpp  teb_legacy.hpp  teb_scan_iter.hpp  teb_scan_util.hpp  teb_types.hpp  teb_util.hpp  teb_wrapper.hpp
teb/src/dtl/bitmap/diff/: diff.hpp  merge.hpp  merge_teb.hpp
teb/src/dtl/bitmap/part/: part.hpp  part_run.hpp  part_updirect.hpp  part_upforward.hpp
teb/src/dtl/bitmap/util/: binary_tree_structure.hpp  bit_buffer.hpp  bit_buffer_avx2.hpp  bit_buffer_avx512.hpp  bitmap_fun.hpp  bitmap_seq_reader.hpp  bitmap_tree.hpp  bitmap_view.hpp  bitmap_writer.hpp  buffer.hpp  convert.hpp  mutable_bitmap_tree.hpp  plain_bitmap.hpp  plain_bitmap_iter.hpp  rank1.hpp  rank1_logic_linear.hpp  rank1_logic_surf.hpp  rank1_logic_word_blocked.hpp
teb/src/dtl/simd/: intrin_avx2.hpp  intrin_avx512.hpp  intrin_sse.hpp  intrin_x64.hpp  intrinsics.hpp  types.hpp
teb/test/dtl/bitmap/: api_bitwise_operation_test.cpp  api_encode_decode_test.cpp  api_random_access_test.cpp  api_run_iterator_skip_test.cpp  api_run_iterator_test.cpp  api_types.hpp  bitwise_operations_helper.hpp  diff_test.cpp  part_diff_test.cpp  plain_bitmap_iter_test.cpp  teb_scan_util_test.cpp  update_test.cpp
upbit/: .gitignore  CMakeLists.txt  README.md  build.sh  generate.py
upbit/src/: main.cpp  threadpool.h
upbit/src/fastbit/: Makefile.am  Makefile.in  array_t.cpp  array_t.h  bitvector.cpp  bitvector.h  util.h
upbit/src/inplace/: table.cpp  table.h
upbit/src/ucb/: table.cpp  table.h
upbit/src/upbit/: perf.h  table.cpp  table.h  tablex.cpp  util.cpp  util.h
